<resources>
    <string name="app_name">Lipstick Inventory</string>
    <string name="empty_view_title_text">Where are all the colors?</string>
    <string name="empty_view_subtitle_text">Get started by adding a lipstick</string>
    <string name="category_overview">Overview</string>
    <string name="hint_lipstick_color">Color</string>
    <string name="hint_lipstick_brand">Brand</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price</string>
    <string name="hint_lipstick_price">Price in Cents</string>

    <!--Label for overflow menu option that inserts inventory data -->
    <string name="action_insert_dummy_data">Add Inventory</string>
    <!--Label for overflow menu option that deletes inventory data -->
    <string name="action_delete_all_entries">Clear Inventory</string>

    <!--Label for Detail Activity if it's a new lipstick -->
    <string name="detail_activity_title_new_lipstick">Add Lipstick</string>

    <!--Label for Detail Activity if it's an existing lipstick -->
    <string name="detail_activity_title_current_lipstick">Edit Lipstick</string>

    <!--If inserting new lipstick failed -->
    <string name="new_lipstick_fail_message">Error saving lipstick</string>

    <!--If inserting new lipstick succeeded -->
    <string name="new_lipstick_success_message">Lipstick saved</string>

    <!--If updating lipstick failed -->
    <string name="update_lipstick_fail_message">Error updating lipstick</string>

    <!--If updating lipstick succeeded -->
    <string name="update_lipstick_success_message">Lipstick updated</string>

    <!-- Label for editor menu option to save lipstick and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current lipstick [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current lipstick [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current lipstick [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this lipstick?</string>

    <!-- Dialog message to ask the user to confirm deleting all lipsticks [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all inventory? This cannot be undone. </string>

    <!-- Dialog button text for the option to confirm deleting the current lipstick [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current lipstick [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current lipstick was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_lipstick_successful">Lipstick deleted</string>

    <!-- Toast message in detail when current lipstick has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_lipstick_failed">Error with deleting lipstick</string>

    <!-- Toast message in detail when quantity tries to go below zero -->
    <string name="detail_quantity_negative">Quantity cannot go below zero</string>

    <!-- Subject for email -->
    <string name="email_subject">Order Request from Lipstick Emporium</string>

    <!-- Message of email -->
    <string name="email_message">We are requesting a shipment of the following item:</string>

    <!-- Error if no internet connection -->
    <string name="no_internet_connection">No internet connection</string>

    <!-- If there are no results -->
    <string name="no_results">No results found</string>

</resources>
