<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_lipstick_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/camera"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Color field -->
                <EditText
                    android:id="@+id/detail_color_view"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_lipstick_color"
                    android:inputType="textCapWords" />

                <!-- Brand field -->
                <EditText
                    android:id="@+id/detail_brand_view"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_lipstick_brand"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <Button
                    android:id="@+id/detail_minus_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-" />

                <EditText
                    android:id="@+id/detail_quantity_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />

                <Button
                    android:id="@+id/detail_plus_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/detail_lipstick_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_lipstick_price"
                    android:inputType="numberDecimal" />

            </LinearLayout>
        </LinearLayout>

            <Button
                android:id="@+id/detail_order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Order More" />

    </LinearLayout>
</ScrollView>